# flashvid-platform-gin/internal/model/playlist_videos.gen.go
@@ -1,0 +1,25 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNamePlaylistVideo = "playlist_videos"
+
+// PlaylistVideo 播放列表视频关联表
+type PlaylistVideo struct {
+	ID         int64     `gorm:"column:id;primaryKey;autoIncrement:true;comment:ID" json:"id"`                        // ID
+	PlaylistID int64     `gorm:"column:playlist_id;not null;comment:播放列表ID" json:"playlist_id"`                       // 播放列表ID
+	VideoID    int64     `gorm:"column:video_id;not null;comment:视频ID" json:"video_id"`                               // 视频ID
+	SortOrder  int32     `gorm:"column:sort_order;not null;comment:排序" json:"sort_order"`                             // 排序
+	CreatedAt  time.Time `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"created_at"` // 创建时间
+}
+
+// TableName PlaylistVideo's table name
+func (*PlaylistVideo) TableName() string {
+	return TableNamePlaylistVideo
+}
