# flashvid-platform-gin/internal/model/playlists.gen.go
@@ -1,0 +1,32 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
+const TableNamePlaylist = "playlists"
+
+// Playlist 播放列表表
+type Playlist struct {
+	ID          int64          `gorm:"column:id;primaryKey;autoIncrement:true;comment:播放列表ID" json:"id"`                    // 播放列表ID
+	UserID      int64          `gorm:"column:user_id;not null;comment:所属用户ID" json:"user_id"`                               // 所属用户ID
+	Title       string         `gorm:"column:title;not null;comment:标题" json:"title"`                                       // 标题
+	Description string         `gorm:"column:description;comment:描述" json:"description"`                                    // 描述
+	CoverURL    string         `gorm:"column:cover_url;comment:封面URL" json:"cover_url"`                                     // 封面URL
+	IsDefault   bool           `gorm:"column:is_default;not null;comment:是否为默认收藏列表" json:"is_default"`                      // 是否为默认收藏列表
+	VideoCount  int32          `gorm:"column:video_count;not null;comment:视频数量" json:"video_count"`                         // 视频数量
+	CreatedAt   time.Time      `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"created_at"` // 创建时间
+	UpdatedAt   time.Time      `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"updated_at"` // 更新时间
+	DeletedAt   gorm.DeletedAt `gorm:"column:deleted_at;comment:删除时间" json:"deleted_at"`                                    // 删除时间
+}
+
+// TableName Playlist's table name
+func (*Playlist) TableName() string {
+	return TableNamePlaylist
+}
